Fixed footer overflow styles problem on mobiles

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -24,7 +24,7 @@
   .footer-grid {
     display: grid;
     gap: $space-8;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(220px, 100%), 1fr));
   }
 
   .footer-col[style*='--col-width:25'] {
